# STL-in-C

./: CMakeLists.txt  Makefile  README.md  library.h
include/: array.h  binary_tree.h  bst.h  deque.h  linked_list.h  max_heap.h  min_heap.h  ordered_map.h  pair.h  quartet.h  queue.h  stack.h  triplet.h  unordered_map.h  utils.h  vector.h
src/: array.c  binary_tree.c  bst.c  deque.c  linked_list.c  max_heap.c  min_heap.c  ordered_map.c  pair.c  quartet.c  queue.c  stack.c  triplet.c  unordered_map.c  utils.c  vector.c
test/: test.c
